Slideshow works kinda

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="intro">
         <div class="intro_poly" id="polyShadow">
         </div>
-        <div class="intro_slides" id="slide" data-anime="slideShow" data-ease="ease-out" data-time="3.800" data-delay="3.200">
+        <div class="intro_slides" id="slide" data-anime="slideShow" data-ease="ease-out" data-direction="forwards" data-time="5000" data-timeFade="1000">
 
         </div>
     </div>
