--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div class="intro_poly" id="polyShadow">
         </div>
         <div class="intro_slides" id="slide" data-anime="slideShow" data-ease="ease-out" data-direction="forwards" data-time="5000" data-timeFade="1000">
-
+        </div>
+        <div class="intro_metal">
         </div>
     </div>
 </body>
