Images load quicker now

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="intro_metal">
         </div>
     </div>
+    <div class="section1">
+        
+    </div>
 </body>
 </html>
 <script src="js/scripts.js"></script>
