got the animations to pause and play when in view

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="intro_metal">
         </div>
     </div>
-    <div class="section1">
+    <div class="section1" id="sectI">
         <div class="section1_spacer">
             
         </div>
@@ -74,7 +74,7 @@
 
         </div>
         <div class="section1_tris mid">
-            <div class="section1_tris mid_top">
+            <div class="section1_tris mid_top" id="midrif" data-time="5000">
 
             </div>
             <div class="section1_tris mid_bottom">
