--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
         <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
-        <script data-main="js/scripts" src="js/require.js"></script>
+        <!-- <script data-main="js/scripts" src="js/require.js"></script> -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
 
@@ -78,7 +78,12 @@
 
             </div>
             <div class="section1_tris mid_bottom">
-                
+                <h1>
+                    Cerakote and Hydrodipping
+                </h1>
+                <div class="section1_tris mid_bottom_text">
+                    Does your weapon lack a certain amount of personalization? Do you want to turn heads at the range? We have the service for you. 
+                </div>
             </div>
         </div>
         <div class="section1_tris right">
