--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
 
         </div>
         <div class="sectionII_black">
-            
+            <h1>
+                Your First Choice for Performance
+            </h1>
+            <div class="sectionII_black_text">
+                First Choice Auto Clinic in Hilliard is central Ohio's      premier auto service, restoration, and performance expert. From engine and transmission rebuilds to hot rod customizations, think of First Choice for all of your vehicle needs. We service all years, makes & models, not just classic cars.
+            </div>
         </div>
         <div class="sectionII_blue_II">
             
