--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
             
         </div>
     </div>
+    <div class="sectionIII">
+        
+    </div>
 </body>
 </html>
 <script src="js/scripts.js"></script>
